# open-vpc

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: makefile.yml
driver/: CMakeLists.txt  Makefile  vpccommon.c  vpccommon.h  vpcdevice.c  vpcdevice.h  vpcdevice_driver.c
install_files/udev/: 99-vpc.rules  vpc_mount
tool/: main.py
tools/: Makefile
tools/shift_tool/: Cargo.toml  Makefile
tools/shift_tool/src/: about.rs  main.rs
