[package]
name = "shift_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dbus = "0.9.7"
eframe = "0.27.0"
env_logger = "0.11.3"
hidapi = "2.6.1"
