[package]
name = "shift_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
env_logger = "0.11.3"
fast_config = { version = "1.1.3", features = ["json5"] }
hidapi = "2.6.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
dirs = { version = "5.0.1", features = [] }

[features]
logging = []

default = ["logging"]
